[package]
name = "repo-health"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.48", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
regex = "1.11.2"
rfd = "0.15.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
walkdir = "2.5.0"